--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap");
+
 body {
-    font-family: sans-serif;
+    font-family: Roboto, system-ui, sans-serif;
     background-color: #24315c7f;
 }
 
