character age added

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,11 @@ h1 {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
+.italics {
+    font-style: italic;
+    font-weight: normal;
+}
+
 #searchBar::placeholder {
     color: rgba(169, 169, 169, 0.5);
 }
